--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "confetti": "^2.0.3",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
