--- a/tenzies-game/package.json
+++ b/tenzies-game/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "confetti": "^2.0.3",
+    "build": "^0.1.4",
+    "fs-extra": "^11.2.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
